--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ rtl88x2ce (5.9.0.6) focal; urgency=medium
 
   * Initial Release.
 
- -- Raul Rodrigo Segura <raurodse@gmail.com>  Tue, 7 Dic 2021 13:18:44 +0200
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Tue, 07 Dec 2021 13:40:16 +0100
